--- a/package.json
+++ b/package.json
@@ -2,20 +2,25 @@
   "name": "musicplayervue",
   "private": true,
   "version": "0.0.1",
-  "type": "module",
+  "main": "./dist-electron/main.js",
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@electron/remote": "^2.1.2",
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@types/node": "^20.14.9",
     "@vitejs/plugin-vue": "^5.0.4",
+    "electron": "^31.1.0",
     "sass": "^1.77.6",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vite-plugin-electron": "^0.28.7",
+    "vite-plugin-electron-renderer": "^0.14.5",
     "vue-tsc": "^2.0.6"
   }
 }
