--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@electron/remote": "^2.1.2",
+    "music-metadata": "^8.3.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
