--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "@electron/remote": "^2.1.2",
     "music-metadata-browser": "^2.5.10",
+    "sortablejs": "^1.15.2",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@types/node": "^20.14.9",
+    "@types/sortablejs": "^1.15.8",
     "@vitejs/plugin-vue": "^5.0.4",
     "electron": "^31.1.0",
     "sass": "^1.77.6",
