--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "dev": "vite ",
     "build": "vue-tsc && vite build",
     "electron": "electron --js-flags\"--expose-gc\" .",
-    "electron-build": "electron-builder",
+    "electron-build": "vue-tsc && electron-builder",
     "preview": "vite preview"
   },
   "build": {
