更改项目名称

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "musicplayervue",
+  "name": "lingyiplayer",
   "author": {
     "name": "Lingyi",
     "email": "accelert123@gmail.com"
